src/style.css
@import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&display=swap');

* {
  margin: 0;
  padding: 0;
  font-family: 'Comic Neue', cursive;
  max-width: 100vw;
}

.fa-solid,
.fa-regular {
  color: grey;
}

input[type="text"],
label {
  border: none;
  outline: none;
  width: 85%;
  cursor: pointer;
}

.fa-arrow-turn-down {
  rotate: 90deg;
}

input[type="text"]::placeholder {
  font-style: italic;
  border: none;
}

.clear {
  color: #8e8e8e;
}

.fa-ellipsis-vertical,
.clear,
.task-checkbox,
.fa-trash-can {
  cursor: pointer;
}

.clear:hover {
  color: red;
  transition: 350ms;
}

.fa-trash-can:hover {
  color: red;
  transform: scale3d(1.3, 1.3, 1.3);
  transition: 250ms;
}

.task-checkbox {
  transform: scale(1.3);
}

.task-container {
  border: 1px solid #e9d045;
  box-shadow: 0 0 8px #e9d045;
}

